...
        goneConditionLabelInitialize()
        makeButtonConstraints()
    }
    
    private func titleInitialize() {
        let titleLabel = UILabel()
        titleLabel.text = "INFO"
        titleLabel.font = Styles.Fonts.infoBlockTitleFont
        self.addSubview(titleLabel)
        titleLabel.snp.makeConstraints { make in
            make.centerX.equalToSuperview()
            make.top.equalToSuperview().inset(Styles.Layout.Constraints.Top.title)
        }
...
            make.top.equalToSuperview().inset(Styles.Layout.Constraints.Top.gone)
        }
    }
    
    let infoBlockHideButton: UIButton = {
        let button = UIButton()
        button.setTitle("Hide", for: .normal)
        button.setTitleColor(Styles.Colors.infoBlockHideButtonTextColor, for: .normal)
        button.titleLabel?.font = Styles.Fonts.infoBlockHideButtonTitleFont
        button.layer.borderColor = Styles.Colors.infoBlockHideButtonBorderColor
        button.layer.borderWidth = Styles.Layout.InfoBlock.buttonBorderWidth
        button.layer.cornerRadius = Styles.Layout.InfoBlock.defaultCornerRadius
        button.backgroundColor = Styles.Colors.infoBlockHideButtonBackgroundColor
...
