...
    @IBOutlet weak var brickPullingSuperView: UIView!
    
    // MARK: - Class instances
    let locationManager = CLLocationManager()
    let weatherInfo = WeatherInfo.sharedInstance()
    var infoBlockView = InfoBlockView()
    let weatherUpdatingActivityIndicator = UIActivityIndicatorView()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        weatherUpdatingActivityIndicator.accessibilityIdentifier = "weatherUpdatingActivityIndicator"
        weatherUpdatingActivityIndicatorInitialize()
        brickPullingSuperView.backgroundColor = Styles.Colors.brickPullingSuperViewColor
...
