...
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="joy-7W-BkV">
                                <rect key="frame" x="75" y="0.0" width="224" height="455"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_stone_normal" translatesAutoresizingMaskIntoConstraints="NO" id="YJd-kx-3GS">
                                        <rect key="frame" x="0.0" y="0.0" width="224" height="455"/>
                                        <accessibility key="accessibilityConfiguration" identifier="brickImage">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                    </imageView>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
...
